Updated DAG to render content in two steps - first in an invisible layer. This fixes an issue where content changed as you zoomed in/out

--- a/pocs/dag-ui-angular/src/app/dag/dag.component.scss
+++ b/pocs/dag-ui-angular/src/app/dag/dag.component.scss
@@ -4,6 +4,14 @@
   display: block;
 }
 
+.buffer {
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  right: 10000px;
+  z-index: -999999;
+}
+
 /* This sets the color for "TK" nodes to a light blue green. */
 /deep/ g.type-TK > rect {
   fill: #00ffd0;
